force-app/main/default/objects/BBC_Article__c/BBC_Article__c.object-meta.xml
<CustomObject>
    <label>BBC Article</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>BBC Articles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BBC Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>