force-app/main/default/objects/BBC_Article__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the Article</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>