force-app/main/default/objects/BBC_Article__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL of the article</description>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>